Add get map by query!
